j'ai modifier code et configurer docker-compose et installer aussi jenkins et sonarqube aussi modifier code pour detection sonarqube les error dans mon projet backend